[gd_scene load_steps=30 format=3 uid="uid://c7mud6d2ljjvj"]

[ext_resource type="Script" path="res://SCRIPTS/game-manager.gd" id="1_4nufx"]
[ext_resource type="PackedScene" uid="uid://de0pmnn81f0e" path="res://SCENES/player.tscn" id="2_fowwk"]
[ext_resource type="Script" path="res://SCRIPTS/camera.gd" id="3_4i2mk"]
[ext_resource type="Script" path="res://SCRIPTS/canvas-controller.gd" id="4_3wit5"]
[ext_resource type="FontFile" uid="uid://bk8b0qsjfd1xy" path="res://FONTS/VT323-Regular.ttf" id="4_7g5vk"]
[ext_resource type="Shader" path="res://SHADERS/crt.gdshader" id="4_y3sf8"]
[ext_resource type="Texture2D" uid="uid://bu6wqmxaqbpea" path="res://SPRITES/ITEMS/sun.png" id="5_87rmp"]
[ext_resource type="Texture2D" uid="uid://duoofrnk02de2" path="res://SPRITES/ITEMS/moon.png" id="6_fkbis"]
[ext_resource type="Texture2D" uid="uid://cpg45fx4e66k8" path="res://SPRITES/ITEMS/item1BIT_shovel.png" id="7_rd8xl"]
[ext_resource type="Texture2D" uid="uid://dtb7xq3hesl66" path="res://TILESET/meat.png" id="8_i5qe8"]
[ext_resource type="Texture2D" uid="uid://btfm6nyxsa1x6" path="res://TILESET/up_arrow.tres" id="8_opk5w"]
[ext_resource type="Texture2D" uid="uid://dy6bwpjkn3slj" path="res://SPRITES/ITEMS/wood.png" id="9_3g3jg"]
[ext_resource type="Script" path="res://SCRIPTS/message_panel.gd" id="12_y1iib"]
[ext_resource type="Texture2D" uid="uid://vlnnqf5hpd5t" path="res://TILESET/action.tres" id="13_1y4k6"]
[ext_resource type="Script" path="res://SCRIPTS/SettingsMenu.gd" id="14_64n3d"]
[ext_resource type="Script" path="res://SCRIPTS/music_manager.gd" id="15_652dt"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_aqw0e"]
color = Color(0, 0, 0, 0)
grow_begin = 0.0
grow_end = 0.0
thickness = 0

[sub_resource type="Animation" id="Animation_nwi0h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../shader:material:shader_parameter/bottomStaticOpt")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../shader:material:shader_parameter/horzFuzzOpt")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../shader:material:shader_parameter/curveIntensityD")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_ns34o"]
resource_name = "flash"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 0.4, 0.435294, 1), Color(1, 1, 1, 1), Color(1, 0.4, 0.435294, 1), Color(1, 1, 1, 1), Color(1, 0.4, 0.435294, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../shader:material:shader_parameter/bottomStaticOpt")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.15, 0.0, 0.2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../shader:material:shader_parameter/horzFuzzOpt")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.8, 0.2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../shader:material:shader_parameter/curveIntensityD")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.95, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uj531"]
_data = {
"RESET": SubResource("Animation_nwi0h"),
"flash": SubResource("Animation_ns34o")
}

[sub_resource type="Animation" id="Animation_rvukt"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("action_image:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 4), Vector2(0, 8), Vector2(0, 4), Vector2(0, 2)]
}

[sub_resource type="Animation" id="Animation_rve2n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("action_image:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y8ta8"]
_data = {
"RESET": SubResource("Animation_rve2n"),
"idle": SubResource("Animation_rvukt")
}

[sub_resource type="Theme" id="Theme_tmb5l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y0w7u"]
shader = ExtResource("4_y3sf8")
shader_parameter/vertJerkOpt = 0.0
shader_parameter/vertMovementOpt = 0.0
shader_parameter/bottomStaticOpt = 0.0
shader_parameter/bottomStaticStrenth = 0.0
shader_parameter/scalinesOpt = 2.0
shader_parameter/rgbOffsetOpt = 0.3
shader_parameter/horzFuzzOpt = 0.2
shader_parameter/curveIntensityA = 5.0
shader_parameter/curveIntensityB = 2.0
shader_parameter/curveIntensityC = 0.5
shader_parameter/curveIntensityD = 1.0

[sub_resource type="Animation" id="Animation_c7fxv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/FadeCanvas-top:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(648, 300)]
}

[sub_resource type="Animation" id="Animation_6cj2h"]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/FadeCanvas-top:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(650, 300), Vector2(0, 300), Vector2(0, 300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/FadeCanvas-mid:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(650, 300), Vector2(0, 300), Vector2(0, 300)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/FadeCanvas-bottom:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(650, 300), Vector2(0, 300), Vector2(0, 300)]
}

[sub_resource type="Animation" id="Animation_ndefu"]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/FadeCanvas-top:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 300), Vector2(0, 300), Vector2(650, 300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/FadeCanvas-mid:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 300), Vector2(0, 300), Vector2(650, 300)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/FadeCanvas-bottom:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 300), Vector2(0, 300), Vector2(650, 300)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fade_out_ended"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3lwfk"]
_data = {
"RESET": SubResource("Animation_c7fxv"),
"fade_in": SubResource("Animation_6cj2h"),
"fade_out": SubResource("Animation_ndefu")
}

[node name="World" type="Node2D"]
scale = Vector2(4, 4)
script = ExtResource("1_4nufx")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -160)
anchor_mode = 0
script = ExtResource("3_4i2mk")
tween_duration = 0.2

[node name="MapNode" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_fowwk")]
position = Vector2(78, 45)
collision_mask = 125
velocity_multiplier = 500.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("4_3wit5")

[node name="FadeCanvas-top" type="ColorRect" parent="CanvasLayer"]
offset_right = 648.0
offset_bottom = 300.0
auto_translate = false
localize_numeral_system = false
mouse_force_pass_scroll_events = false
color = Color(0, 0, 0, 1)

[node name="FadeCanvas-mid" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -100.0
offset_right = 546.667
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2
rotation = -3.14159
pivot_offset = Vector2(6.10352e-05, 150)
auto_translate = false
localize_numeral_system = false
mouse_force_pass_scroll_events = false
color = Color(0, 0, 0, 1)

[node name="FadeCanvas-bottom" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 541.667
offset_bottom = 100.0
grow_vertical = 0
auto_translate = false
localize_numeral_system = false
mouse_force_pass_scroll_events = false
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 160.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)

[node name="ResourcesTitle" type="Label" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 212.0
offset_bottom = 61.0
localize_numeral_system = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_7g5vk")
theme_override_font_sizes/font_size = 50
text = "RESOURCES_KEY"

[node name="Time" type="Label" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 448.0
offset_right = 608.0
offset_bottom = 53.0
pivot_offset = Vector2(80, 27)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_7g5vk")
theme_override_font_sizes/font_size = 50
text = "07:00 am"
horizontal_alignment = 1

[node name="SunSprite" type="TextureRect" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 448.0
offset_top = 65.0
offset_right = 488.0
offset_bottom = 105.0
texture = ExtResource("5_87rmp")

[node name="MoonSprite" type="TextureRect" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 576.0
offset_top = 65.0
offset_right = 616.0
offset_bottom = 105.0
texture = ExtResource("6_fkbis")

[node name="ProgressBar" type="HSlider" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 448.0
offset_top = 111.0
offset_right = 529.0
offset_bottom = 127.0
scale = Vector2(2, 2)
theme_override_icons/grabber = ExtResource("8_opk5w")
theme_override_styles/slider = SubResource("StyleBoxLine_aqw0e")
scrollable = false

[node name="shovel_parent" type="Control" parent="CanvasLayer/ColorRect"]
anchors_preset = 0
offset_left = 166.0
offset_top = 72.0
offset_right = 206.0
offset_bottom = 112.0

[node name="shovel" type="TextureRect" parent="CanvasLayer/ColorRect/shovel_parent"]
modulate = Color(1, 1, 1, 0.2)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("7_rd8xl")

[node name="wood_parent" type="Control" parent="CanvasLayer/ColorRect"]
anchors_preset = 0
offset_left = 102.0
offset_top = 72.0
offset_right = 142.0
offset_bottom = 112.0

[node name="wood" type="TextureRect" parent="CanvasLayer/ColorRect/wood_parent"]
modulate = Color(1, 1, 1, 0.2)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("9_3g3jg")

[node name="food_parent" type="Control" parent="CanvasLayer/ColorRect"]
anchors_preset = 0
offset_left = 38.0
offset_top = 72.0
offset_right = 78.0
offset_bottom = 112.0

[node name="food" type="TextureRect" parent="CanvasLayer/ColorRect/food_parent"]
modulate = Color(1, 1, 1, 0.2)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("8_i5qe8")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 464.0
offset_top = 113.0
offset_right = 593.0
offset_bottom = 116.0

[node name="time_anim" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
root_node = NodePath("../Time")
libraries = {
"": SubResource("AnimationLibrary_uj531")
}

[node name="message_panel" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_y1iib")
metadata/_edit_use_anchors_ = true

[node name="message_border" type="ColorRect" parent="CanvasLayer/message_panel"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="message_canvas" type="ColorRect" parent="CanvasLayer/message_panel/message_border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 8.0
offset_right = -15.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)

[node name="text" type="Label" parent="CanvasLayer/message_panel/message_border/message_canvas"]
layout_mode = 0
offset_left = 11.0
offset_top = 6.0
offset_right = 599.0
offset_bottom = 165.0
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_7g5vk")
theme_override_font_sizes/font_size = 50
text = "MESSAGE"
autowrap_mode = 2

[node name="Control" type="Control" parent="CanvasLayer/message_panel/message_border/message_canvas"]
anchors_preset = 0
offset_left = 575.0
offset_top = 124.0
offset_right = 615.0
offset_bottom = 164.0

[node name="action_image" type="TextureRect" parent="CanvasLayer/message_panel/message_border/message_canvas/Control"]
visible = false
modulate = Color(0.768627, 0.760784, 0.0862745, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("13_1y4k6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/message_panel/message_border/message_canvas/Control"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_y8ta8")
}

[node name="SettingsMenu" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("14_64n3d")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/SettingsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -356.0
offset_right = 256.0
offset_bottom = 368.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-48, -44)

[node name="Title" type="Label" parent="CanvasLayer/SettingsMenu/VBoxContainer"]
layout_mode = 2
localize_numeral_system = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_7g5vk")
theme_override_font_sizes/font_size = 50
text = "SETTINGS_TITLE"
horizontal_alignment = 1

[node name="Language" type="Label" parent="CanvasLayer/SettingsMenu/VBoxContainer"]
layout_mode = 2
localize_numeral_system = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_7g5vk")
theme_override_font_sizes/font_size = 50
text = "LANGUAGE_TITLE"

[node name="Languages" type="BoxContainer" parent="CanvasLayer/SettingsMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_tmb5l")

[node name="Spanish" type="Button" parent="CanvasLayer/SettingsMenu/VBoxContainer/Languages"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
localize_numeral_system = false
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_7g5vk")
theme_override_font_sizes/font_size = 50
text = "SPANISH_KEY"

[node name="English" type="Button" parent="CanvasLayer/SettingsMenu/VBoxContainer/Languages"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
localize_numeral_system = false
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_7g5vk")
theme_override_font_sizes/font_size = 50
text = "ENGLISH_KEY"

[node name="music_key" type="Label" parent="CanvasLayer/SettingsMenu/VBoxContainer"]
layout_mode = 2
localize_numeral_system = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_7g5vk")
theme_override_font_sizes/font_size = 50
text = "MUSIC_KEY"

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/SettingsMenu/VBoxContainer"]
layout_mode = 2
max_value = 10.0
rounded = true

[node name="sfx_key" type="Label" parent="CanvasLayer/SettingsMenu/VBoxContainer"]
layout_mode = 2
localize_numeral_system = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_7g5vk")
theme_override_font_sizes/font_size = 50
text = "FX_KEY"

[node name="SFXSlider" type="HSlider" parent="CanvasLayer/SettingsMenu/VBoxContainer"]
layout_mode = 2
max_value = 10.0
rounded = true

[node name="CREDITS" type="Label" parent="CanvasLayer/SettingsMenu/VBoxContainer"]
layout_mode = 2
localize_numeral_system = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_7g5vk")
theme_override_font_sizes/font_size = 50
text = "CREDITS"
autowrap_mode = 3

[node name="_RothioTome" type="LinkButton" parent="CanvasLayer/SettingsMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
localize_numeral_system = false
mouse_default_cursor_shape = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_7g5vk")
theme_override_font_sizes/font_size = 50
text = "CONTACT"
uri = "https://linktr.ee/rothiotome"

[node name="BackButton" type="Button" parent="CanvasLayer/SettingsMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
localize_numeral_system = false
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_7g5vk")
theme_override_font_sizes/font_size = 50
text = "BACK_KEY"

[node name="shader" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_y0w7u")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="DaylightTimer" type="Timer" parent="."]

[node name="MusicManager" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
bus = &"Music"
script = ExtResource("15_652dt")

[node name="fader" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
libraries = {
"": SubResource("AnimationLibrary_3lwfk")
}

[connection signal="tree_exiting" from="CanvasLayer/message_panel" to="CanvasLayer/message_panel" method="_on_tree_exiting"]
[connection signal="visibility_changed" from="CanvasLayer/SettingsMenu" to="CanvasLayer/SettingsMenu" method="_on_visibility_changed"]
[connection signal="pressed" from="CanvasLayer/SettingsMenu/VBoxContainer/Languages/Spanish" to="CanvasLayer/SettingsMenu" method="_on_spanish_pressed"]
[connection signal="pressed" from="CanvasLayer/SettingsMenu/VBoxContainer/Languages/English" to="CanvasLayer/SettingsMenu" method="_on_english_pressed"]
[connection signal="value_changed" from="CanvasLayer/SettingsMenu/VBoxContainer/MusicSlider" to="CanvasLayer/SettingsMenu" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/SettingsMenu/VBoxContainer/SFXSlider" to="CanvasLayer/SettingsMenu" method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/SettingsMenu/VBoxContainer/BackButton" to="CanvasLayer/SettingsMenu" method="_on_back_button_pressed"]
[connection signal="timeout" from="DaylightTimer" to="." method="_on_daylight_timer_timeout"]
